--- a/ian_CV.tex
+++ b/ian_CV.tex
@@ -227,7 +227,7 @@
 
 
     \section{Publications}
-    \subsection{In progress}
+    \subsection{Preprints}
 
         \begin{samepage}
             \begin{twocolentry}{
@@ -265,7 +265,7 @@
             \begin{highlights}
                 \item Developed a pomodoro clock that implements deep-learning, NLP, and generative AI to provide adaptive productive insights, integrated real-time tracking, and task categorization
                 \item Designed to help individuals keep on track and minimize the amount of work required to plan tasks and budget time
-                \item Tools Used: PyTorch, Scikit-Learn
+                \item Tools Used: PyTorch, scikit-Learn, scapy, tensorflow, huggingface
             \end{highlights}
         \end{onecolentry}
 
