--- a/ian_CV.tex
+++ b/ian_CV.tex
@@ -190,12 +190,14 @@
             \textbf{University of Toronto}
 
             \textit{Honours BSc in Statistics}
+
+            Advisor: Jun Young Park
         \end{twocolentry}
 
         \vspace{0.10 cm}
         \begin{onecolentry}
             \begin{highlights}
-                \item \textbf{Coursework:} Data Analysis, Probability, Machine learning, Mathematical Statistics, Time Series Analysis, Stochastic Processes, Calculus, Linear Algebra
+                \item \textbf{Coursework:} Data Analysis, Applied Statistics, Experimental Design, Probability, Machine Learning, Mathematical Statistics, Time Series Analysis, Stochastic Processes, Multivariable Calculus, Real Analysis, Linear Algebra, Partial Differential Equations
             \end{highlights}
         \end{onecolentry}
 
@@ -227,7 +229,7 @@
 
 
     \section{Publications}
-    \subsection{In progress}
+    \subsection{Preprint}
 
         \begin{samepage}
             \begin{twocolentry}{
@@ -305,7 +307,7 @@
 
         \vspace{0.10 cm}
     \begin{twocolentry}{      NSERC, UofA}
-        Awarded to conduct research during the 2023 and 2024 Spring/Summer terms udner the supervision of Professor Mike A. Kouritzin at the University of Alberta
+        Awarded to conduct research during the 2023 and 2024 Spring/Summer terms under the supervision of Professor Mike A. Kouritzin at the University of Alberta
     \end{twocolentry}
 
     \vspace{0.2cm}
