Updated CV april 2025

--- a/ian_CV.tex
+++ b/ian_CV.tex
@@ -133,7 +133,7 @@
         \LenToUnit{\paperwidth-2 cm-0.2 cm+0.05cm},
         \LenToUnit{\paperheight-1.0 cm}
     ){\vtop{{\null}\makebox[0pt][c]{
-        \small\color{gray}\textit{Last updated in November 2024}\hspace{\widthof{Last updated in November 2024}}
+        \small\color{gray}\textit{Last updated in April 2025}\hspace{\widthof{Last updated in April 2025}}
     }}}%
   }%
 }%
@@ -156,26 +156,21 @@
     \placelastupdatedtext
     \begin{header}
         \textbf{\fontsize{24 pt}{24 pt}\selectfont Ian Zhang}
-
+    
         \textit{\fontsize{12 pt}{12 pt}\selectfont Curriculum Vitae}
-
+    
         \vspace{0.3 cm}
-
+    
         \normalsize
-        \mbox{{\color{black}\footnotesize\faMapMarker*}\hspace*{0.13cm}Toronto, ON, CA}%
-        \kern 0.25 cm%
-        \AND%
-        \kern 0.25 cm%
+        \mbox{{\color{black}\footnotesize\faMapMarker*}\hspace*{0.13cm}Toronto, ON}%
+        \kern 0.4 cm%
         \mbox{\hrefWithoutArrow{mailto:ianz.zhang@mail.utoronto.ca}{\color{black}{\footnotesize\faEnvelope[regular]}\hspace*{0.13cm}ianz.zhang@mail.utoronto.ca}}%
-        \kern 0.25 cm%
-        \AND%
-        \kern 0.25 cm%
-        \mbox{\hrefWithoutArrow{tel:+1 (780) 909-2566}{\color{black}{\footnotesize\faPhone*}\hspace*{0.13cm}+1 (780) 909-2566}}%
-        \kern 0.25 cm%
-        \AND%
-        \kern 0.25 cm%
+        \kern 0.4 cm%
+        \mbox{\hrefWithoutArrow{tel:+1 (780)-909-2566}{\color{black}{\footnotesize\faPhone*}\hspace*{0.13cm}+1 (780)-909-2566}}%
+        \kern 0.4 cm%
         \mbox{\hrefWithoutArrow{https://ian-zhang.com/}{\color{black}{\footnotesize\faLink}\hspace*{0.13cm}ian-zhang.com}}%
-        \kern 0.25 cm%
+        \kern 0.4 cm%
+        \mbox{\hrefWithoutArrow{https://scholar.google.com/citations?user=0FL5fjMAAAAJ&hl=en}{\color{black}{\footnotesize\faGraduationCap}\hspace*{0.13cm}Google Scholar}}%
     \end{header}
 
     \vspace{0.3 cm - 0.3 cm}
@@ -219,7 +214,7 @@
         \begin{onecolentry}
             \begin{highlights}
                 \item Awarded 2 scholarships from Natural Sciences and Engineering Research Council of Canada
-                \item Researched deep fake simulation/detection methods
+                \item Researched deep fake simulation/detection methods in tandem with Scotiabank
                 \item Helped design and implement a model involving Hidden Markov Models with a GAN-like structure
             \end{highlights}
         \end{onecolentry}
@@ -247,6 +242,22 @@
                 \url{https://arxiv.org/abs/2411.07993}
             \end{onecolentry}
         \end{samepage}
+
+
+    \section{Presentations}
+    \subsection{Upcoming}
+    \begin{twocolentry}{   
+            
+        \textit{May 2025}}
+            \textbf{Markov Processes for Enhanced Deepfake Generation and
+            Detection}
+        \end{twocolentry}
+
+        \vspace{0.10 cm}
+    \begin{onecolentry}
+        Accepted to the 2025 SSC Annual Meeting in Saskatoon.
+    \end{onecolentry}
+
 
 
     
