--- a/ian_CV.tex
+++ b/ian_CV.tex
@@ -133,7 +133,7 @@
         \LenToUnit{\paperwidth-2 cm-0.2 cm+0.05cm},
         \LenToUnit{\paperheight-1.0 cm}
     ){\vtop{{\null}\makebox[0pt][c]{
-        \small\color{gray}\textit{Last updated in April 2025}\hspace{\widthof{Last updated in April 2025}}
+        \small\color{gray}\textit{Last updated in May 2025}\hspace{\widthof{Last updated in May 2025}}
     }}}%
   }%
 }%
@@ -177,24 +177,40 @@
 
     \section{Education}
 
-        
+        % Master's
         \begin{twocolentry}{
             
             
-        \textit{Sept 2021 – June 2025}}
+            \textit{Sept 2025 - Apr 2026}}
+                \textbf{University of Toronto}
+    
+                \textit{MSc in Statistics}
+    
+                % Advisor: Jun Young Park
+            \end{twocolentry}
+
+            % add coursework here later when decided what to take
+
+        
+        \vspace{0.2cm}
+        % Bachelors
+        \begin{twocolentry}{
+            
+            
+        \textit{Sept 2021 - Apr 2025}}
             \textbf{University of Toronto}
 
-            \textit{Honours BSc in Statistics}
+            \textit{Honours BSc in Statistics (with high distinction)}
 
             Advisor: Jun Young Park
         \end{twocolentry}
 
         \vspace{0.10 cm}
-        \begin{onecolentry}
-            \begin{highlights}
-                \item \textbf{Coursework:} Data Analysis, Applied Statistics, Experimental Design, Probability, Machine Learning, Mathematical Statistics, Time Series Analysis, Stochastic Processes, Multivariable Calculus, Real Analysis, Linear Algebra, Partial Differential Equations
-            \end{highlights}
-        \end{onecolentry}
+        % \begin{onecolentry}
+        %     \begin{highlights}
+        %         \item \textbf{Coursework:} Data Analysis, Applied Statistics, Experimental Design, Probability, Machine Learning, Mathematical Statistics, Time Series Analysis, Stochastic Processes, Multivariable Calculus, Real Analysis, Linear Algebra, Partial Differential Equations
+        %     \end{highlights}
+        % \end{onecolentry}
 
 
 
@@ -245,18 +261,24 @@
 
 
     \section{Presentations}
-    \subsection{Upcoming}
-    \begin{twocolentry}{   
-            
-        \textit{May 2025}}
-            \textbf{Markov Processes for Enhanced Deepfake Generation and
-            Detection}
-        \end{twocolentry}
+    \subsection{Talks}
+    \begin{twocolentry}
+        {\textit{2025}}
+        2025 SSC Annual Meeting in Saskatoon
+    \end{twocolentry}
+    \begin{twocolentry}
+        {\textit{2025}}
+        3rd Joint SIAM/CAIMS Annual Meetings (scheduled)
+    \end{twocolentry}
 
-        \vspace{0.10 cm}
-    \begin{onecolentry}
-        Accepted to the 2025 SSC Annual Meeting in Saskatoon.
-    \end{onecolentry}
+    \subsection{Posters}
+    \begin{twocolentry}
+        {\textit{2025}}
+        The Thirteenth Annual Canadian Statistics Student Conference
+
+    \end{twocolentry}
+
+
 
 
 
