Added masters degree to CV

--- a/ian_CV.tex
+++ b/ian_CV.tex
@@ -186,7 +186,7 @@
     
                 \textit{MSc in Statistics}
     
-                % Advisor: Jun Young Park
+                % Advisor: 
             \end{twocolentry}
 
             % add coursework here later when decided what to take
