--- a/ian_CV.tex
+++ b/ian_CV.tex
@@ -1,392 +1,153 @@
-\documentclass[10pt, letterpaper]{article}
-
-% Packages:
-\usepackage[
-    ignoreheadfoot, % set margins without considering header and footer
-    top=2 cm, % seperation between body and page edge from the top
-    bottom=2 cm, % seperation between body and page edge from the bottom
-    left=2 cm, % seperation between body and page edge from the left
-    right=2 cm, % seperation between body and page edge from the right
-    footskip=1.0 cm, % seperation between body and footer
-    % showframe % for debugging 
-]{geometry} % for adjusting page geometry
-\usepackage{titlesec} % for customizing section titles
-\usepackage{tabularx} % for making tables with fixed width columns
-\usepackage{array} % tabularx requires this
-\usepackage[dvipsnames]{xcolor} % for coloring text
-\definecolor{primaryColor}{RGB}{0, 79, 144} % define primary color
-\usepackage{enumitem} % for customizing lists
-\usepackage{fontawesome5} % for using icons
-\usepackage{amsmath} % for math
-\usepackage[
-    pdftitle={Ian Zhang's CV},
-    pdfauthor={Ian Zhang},
-    pdfcreator={LaTeX with RenderCV},
-    colorlinks=true,
-    urlcolor=primaryColor
-]{hyperref} % for links, metadata and bookmarks
-\usepackage[pscoord]{eso-pic} % for floating text on the page
-\usepackage{calc} % for calculating lengths
-\usepackage{bookmark} % for bookmarks
-\usepackage{lastpage} % for getting the total number of pages
-\usepackage{changepage} % for one column entries (adjustwidth environment)
-\usepackage{paracol} % for two and three column entries
-\usepackage{ifthen} % for conditional statements
-\usepackage{needspace} % for avoiding page brake right after the section title
-\usepackage{iftex} % check if engine is pdflatex, xetex or luatex
-
-% Ensure that generate pdf is machine readable/ATS parsable:
-\ifPDFTeX
-    \input{glyphtounicode}
-    \pdfgentounicode=1
-    % \usepackage[T1]{fontenc} % this breaks sb2nov
-    \usepackage[utf8]{inputenc}
-    \usepackage{lmodern}
-\fi
+%====== BASIC PREAMBLE STUFF =======
+\documentclass[11pt]{article}
+\usepackage[nottoc,numbib]{tocbibind}
+\usepackage{geometry} 
+\geometry{
+    a4paper,
+    total={170mm,257mm},
+    left=1in,
+    top=1in,
+    bottom = 1in,
+    right = 1in
+}
+\usepackage[hyphens, spaces, obeyspaces]{url}
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks = false,
+    citecolor = blue
+}
+\usepackage{amsmath, amssymb, amsthm, lastpage, upgreek, fancyhdr, seqsplit, bm, mathrsfs, accents, transparent, dsfont, float, esint, tikz, lipsum, lmodern, hyperref, cleveref, bigints, tikz-among-us, graphicx, xcolor, listings, breqn, cancel}
+\usepackage{minted}
+\usepackage[most]{tcolorbox}
+\usepackage[framemethod=TikZ]{mdframed}
+\hypersetup{pdfborder=0 0 0}
+\usepgflibrary{arrows}
+\usepackage[nodisplayskipstretch]{setspace}\onehalfspacing
+\tcbuselibrary{theorems}
+\allowdisplaybreaks
+\setlength{\parindent}{0pt}
 
 
+%====== ENVIRONMENTS STUFF ======
+\renewcommand\qedsymbol{$\blacksquare$}
 
-% Some settings:
-\AtBeginEnvironment{adjustwidth}{\partopsep0pt} % remove space before adjustwidth environment
-\pagestyle{empty} % no header or footer
-\setcounter{secnumdepth}{0} % no section numbering
-\setlength{\parindent}{0pt} % no indentation
-\setlength{\topskip}{0pt} % no top skip
-\setlength{\columnsep}{0cm} % set column seperation
-\makeatletter
-\let\ps@customFooterStyle\ps@plain % Copy the plain style to customFooterStyle
-\patchcmd{\ps@customFooterStyle}{\thepage}{
-    \color{gray}\textit{\small Ian Zhang - Page \thepage{} of \pageref*{LastPage}}
-}{}{} % replace number by desired string
-\makeatother
-\pagestyle{customFooterStyle}
+\theoremstyle{definition}
+\newtheorem*{definition}{Definition}
+\newtheorem*{theorem}{Theorem}
+\newtheorem*{claim}{Claim}
+\newtheorem*{lemma}{Lemma}
+\newtheorem*{corollary}{Corollary}
+\newtheorem*{proposition}{Proposition}
 
-\titleformat{\section}{\needspace{4\baselineskip}\bfseries\large}{}{0pt}{}[\vspace{1pt}\titlerule]
-
-\titlespacing{\section}{
-    % left space:
-    -1pt
-}{
-    % top space:
-    0.3 cm
-}{
-    % bottom space:
-    0.2 cm
-} % section title spacing
-
-\renewcommand\labelitemi{$\circ$} % custom bullet points
-\newenvironment{highlights}{
-    \begin{itemize}[
-        topsep=0.10 cm,
-        parsep=0.10 cm,
-        partopsep=0pt,
-        itemsep=0pt,
-        leftmargin=0.4 cm + 10pt
-    ]
-}{
-    \end{itemize}
-} % new environment for highlights
-
-\newenvironment{highlightsforbulletentries}{
-    \begin{itemize}[
-        topsep=0.10 cm,
-        parsep=0.10 cm,
-        partopsep=0pt,
-        itemsep=0pt,
-        leftmargin=10pt
-    ]
-}{
-    \end{itemize}
-} % new environment for highlights for bullet entries
-
-
-\newenvironment{onecolentry}{
-    \begin{adjustwidth}{
-        0.2 cm + 0.00001 cm
-    }{
-        0.2 cm + 0.00001 cm
-    }
-}{
-    \end{adjustwidth}
-} % new environment for one column entries
-
-\newenvironment{twocolentry}[2][]{
-    \onecolentry
-    \def\secondColumn{#2}
-    \setcolumnwidth{\fill, 4.5 cm}
-    \begin{paracol}{2}
-}{
-    \switchcolumn \raggedleft \secondColumn
-    \end{paracol}
-    \endonecolentry
-} % new environment for two column entries
-
-\newenvironment{header}{
-    \setlength{\topsep}{0pt}\par\kern\topsep\centering\linespread{1.5}
-}{
-    \par\kern\topsep
-} % new environment for the header
-
-\newcommand{\placelastupdatedtext}{% \placetextbox{<horizontal pos>}{<vertical pos>}{<stuff>}
-  \AddToShipoutPictureFG*{% Add <stuff> to current page foreground
-    \put(
-        \LenToUnit{\paperwidth-2 cm-0.2 cm+0.05cm},
-        \LenToUnit{\paperheight-1.0 cm}
-    ){\vtop{{\null}\makebox[0pt][c]{
-        \small\color{gray}\textit{Last updated in May 2025}\hspace{\widthof{Last updated in May 2025}}
-    }}}%
-  }%
+\newcounter{theo}[section]\setcounter{theo}{0}
+\renewcommand{\thetheo}{\arabic{section}.\arabic{theo}}
+\newenvironment{theo}[2][]{%
+\refstepcounter{theo}%
+\ifstrempty{#1}%
+{\mdfsetup{%
+frametitle={%
+\tikz[baseline=(current bounding box.east),outer sep=0pt]
+\node[anchor=east,rectangle,fill=green!20]
+{\strut};}}
 }%
+{\mdfsetup{%
+frametitle={%
+\tikz[baseline=(current bounding box.east),outer sep=0pt]
+\node[anchor=east,rectangle,fill=green!20]
+{\strut#1};}}%
+}%
+\mdfsetup{innertopmargin=10pt,linecolor=blue!20,%
+linewidth=2pt,topline=true,%
+frametitleaboveskip=\dimexpr-\ht\strutbox\relax
+}
+\begin{mdframed}[]\relax%
+\label{#2}}{\end{mdframed}}
 
-% save the original href command in a new command:
-\let\hrefWithoutArrow\href
 
-% new command for external links:
-\renewcommand{\href}[2]{\hrefWithoutArrow{#1}{\ifthenelse{\equal{#2}{}}{ }{#2 }\raisebox{.15ex}{\footnotesize \faExternalLink*}}}
+%====== NEW COMMANDS ======
+\newcommand{\R}{\mathbb{R}}
+\newcommand{\N}{\mathbb N}
+\newcommand{\Z}{\mathbb Z}
+\newcommand{\Q}{\mathbb Q}
+\newcommand{\1}{\mathds 1}
+\newcommand{\Var}{\text{Var}}
+\newcommand{\Cov}{\text{Cov}}
+\newcommand{\sd}{\text{sd}}
+\newcommand{\se}{\text{se}}
+\renewcommand{\L}{\mathcal {L}}
+\renewcommand{\lambda}{\uplambda}
+\newcommand{\iidsim}{\stackrel{iid}{\sim}}
+\newcommand{\otherwise}{\text{otherwise}}
+\newcommand{\indep}{\perp \!\!\! \perp}
+\renewcommand{\epsilon}{\varepsilon}
+\newcommand{\st}{\text{ s.t. }}
+\newcommand{\ds}{\displaystyle}
+\newcommand{\ind}{\stackrel{d}{\to}}
+\newcommand{\inp}{\stackrel{p}{\to}}
+\DeclareMathOperator*{\argmax}{arg\,max}
+\DeclareMathOperator*{\argmin}{arg\,min}
+
+
+%====== HEADER AND TITLE =======
+
+
+\title{Ian Zhang}
+\author{Curriculum Vitae}
 
 
 \begin{document}
-    \newcommand{\AND}{\unskip
-        \cleaders\copy\ANDbox\hskip\wd\ANDbox
-        \ignorespaces
-    }
-    \newsavebox\ANDbox
-    \sbox\ANDbox{}
+\hfill {\scriptsize\textit{\textcolor{gray}{Last updated: June 2025}}}
+\begin{center}
+    {\huge \textbf{Ian Zhang}}\\
+    \textit{Curriculum Vitae}
+\end{center}
 
-    \placelastupdatedtext
-    \begin{header}
-        \textbf{\fontsize{24 pt}{24 pt}\selectfont Ian Zhang}
-    
-        \textit{\fontsize{12 pt}{12 pt}\selectfont Curriculum Vitae}
-    
-        \vspace{0.3 cm}
-    
-        \normalsize
-        \mbox{{\color{black}\footnotesize\faMapMarker*}\hspace*{0.13cm}Toronto, ON}%
-        \kern 0.4 cm%
-        \mbox{\hrefWithoutArrow{mailto:ianz.zhang@mail.utoronto.ca}{\color{black}{\footnotesize\faEnvelope[regular]}\hspace*{0.13cm}ianz.zhang@mail.utoronto.ca}}%
-        \kern 0.4 cm%
-        \mbox{\hrefWithoutArrow{tel:+1 (780)-909-2566}{\color{black}{\footnotesize\faPhone*}\hspace*{0.13cm}+1 (780)-909-2566}}%
-        \kern 0.4 cm%
-        \mbox{\hrefWithoutArrow{https://ian-zhang.com/}{\color{black}{\footnotesize\faLink}\hspace*{0.13cm}ian-zhang.com}}%
-        \kern 0.4 cm%
-        \mbox{\hrefWithoutArrow{https://scholar.google.com/citations?user=0FL5fjMAAAAJ&hl=en}{\color{black}{\footnotesize\faGraduationCap}\hspace*{0.13cm}Google Scholar}}%
-    \end{header}
+\section*{Contact Information}
+Email: \href{mailto:ianz.zhang@mail.utoronto.ca}{ianz.zhang@mail.utoronto.ca}\\
+Website: \href{www.ian-zhang.com}{ian-zhang.com}
 
-    \vspace{0.3 cm - 0.3 cm}
+\section*{Education}
+\textbf{MSc in Statistics}, University of Toronto \hfill \textit{2026}\\
+\textbf{Honours BSc in Statistics/Mathematics}, University of Toronto \hfill \textit{2025}\\
+\underline{Advisor:} \href{https://junjypark.github.io/}{Jun Young Park}
 
-    \section{Education}
+\section*{Experience}
+\textbf{Summer Research Trainee}, McGill University \hfill \textit{2025}\\
+\textbf{Research Assistant}, University of Alberta \hfill \textit{2023-2024}
 
-        % Master's
-        \begin{twocolentry}{
-            
-            
-            \textit{Sept 2025 - Apr 2026}}
-                \textbf{University of Toronto}
-    
-                \textit{MSc in Statistics}
-    
-                % Advisor: 
-            \end{twocolentry}
+\section*{Publications}
+{\small* = Corresponding Author}
+\subsection*{Under Review}
+\begin{enumerate}
+    \item Michael A. Kouritzin, \textbf{Ian Zhang}*, Jyoti Bhadana, Seoyeon Park \hfill \textit{2024}\\
+    Markov Processes for Enhanced Deepfake Generation and Detection \\
+    \url{https://arxiv.org/abs/2411.07993}
+\end{enumerate}
 
-            % add coursework here later when decided what to take
+\section*{Presentations}
+\subsection*{Talks}
+2025 SSC Annual Meeting in Saskatoonn \hfill \textit{2025}\\
+Third Joint SIAM/CAIMS Annual Meetings (scheduled) \hfill \textit{2025}
 
-        
-        \vspace{0.2cm}
-        % Bachelors
-        \begin{twocolentry}{
-            
-            
-        \textit{Sept 2021 - Apr 2025}}
-            \textbf{University of Toronto}
+\subsection*{Posters}
+The Thirteenth Annual Canadian Statistics Student Conference \hfill \textit{2025}
 
-            \textit{Honours BSc in Statistics (with high distinction)}
+\section*{Honours and Awards}
+Anna \& Alex Beverly Memorial Fellowship \hfill \textit{2025}\\
+NSERC Undergraduate Student Research Award (x2) \hfill \textit{2023, 2024}\\
+Jack Zwaigenbaum Scholarship \hfill \textit{2022}\\
+Dean's List Scholar (x4) \hfill \textit{2022, 2023, 2024, 2025}
 
-            Advisor: Jun Young Park
-        \end{twocolentry}
+\section*{Services}
+\subsection*{Conferences}
+Session co-chair, 2025 Third Joint SIAM/CAIMS Annual Meetings (scheduled) 
 
-        \vspace{0.10 cm}
-        % \begin{onecolentry}
-        %     \begin{highlights}
-        %         \item \textbf{Coursework:} Data Analysis, Applied Statistics, Experimental Design, Probability, Machine Learning, Mathematical Statistics, Time Series Analysis, Stochastic Processes, Multivariable Calculus, Real Analysis, Linear Algebra, Partial Differential Equations
-        %     \end{highlights}
-        % \end{onecolentry}
+
+\section*{Other}
+\underline{Languages Spoken:} English (native), Mandarin (native), Japanese (intermediate)\\
+\underline{Memberships:} Statistical Society of Canada
 
 
 
-    
-    \section{Experience}
-
-        \begin{twocolentry}{
-        \textit{Edmonton, AB}    
-            
-        \textit{May 2023 – Aug 2024}}
-            \textbf{Research Assistant}
-            
-            \textit{University of Alberta}
-        \end{twocolentry}
-
-        \vspace{0.10 cm}
-        \begin{onecolentry}
-            \begin{highlights}
-                \item Awarded 2 scholarships from Natural Sciences and Engineering Research Council of Canada
-                \item Researched deep fake simulation/detection methods in tandem with Scotiabank
-                \item Helped design and implement a model involving Hidden Markov Models with a GAN-like structure
-            \end{highlights}
-        \end{onecolentry}
-
-
-        \vspace{0.2 cm}
-
-
-    \section{Publications}
-    \subsection{In progress}
-
-        \begin{samepage}
-            \begin{twocolentry}{
-                \textit{2024}
-            }
-                \textbf{Markov Processes for Enhanced Deepfake Generation and
-                Detection}
-
-                \vspace{0.10 cm}
-
-                \mbox{Bhadana, J.}, \mbox{Kouritzin, M. A.}, \mbox{Park, S.}, \mbox{\textbf{\textit{Zhang, I.}}}
-            \end{twocolentry}
-            \vspace{0.10 cm}
-            \begin{onecolentry}
-                \url{https://arxiv.org/abs/2411.07993}
-            \end{onecolentry}
-        \end{samepage}
-
-
-    \section{Presentations}
-    \subsection{Talks}
-    \begin{twocolentry}
-        {\textit{2025}}
-        2025 SSC Annual Meeting in Saskatoon
-    \end{twocolentry}
-    \begin{twocolentry}
-        {\textit{2025}}
-        3rd Joint SIAM/CAIMS Annual Meetings (scheduled)
-    \end{twocolentry}
-
-    \subsection{Posters}
-    \begin{twocolentry}
-        {\textit{2025}}
-        The Thirteenth Annual Canadian Statistics Student Conference
-
-    \end{twocolentry}
-
-
-
-
-
-    
-    \section{Projects}
-
-
-
-        
-        \begin{twocolentry}{
-            
-            
-        \textit{\href{https://github.com/IanZhang42/pomodoroclock.git}{GitHub}}}
-            \textbf{Pomodoro Clock with Deep-learning Implementations}
-        \end{twocolentry}
-
-        \vspace{0.10 cm}
-        \begin{onecolentry}
-            \begin{highlights}
-                \item Developed a pomodoro clock that implements deep-learning, NLP, and generative AI to provide adaptive productive insights, integrated real-time tracking, and task categorization
-                \item Designed to help individuals keep on track and minimize the amount of work required to plan tasks and budget time
-                \item Tools Used: PyTorch, scikit-Learn, scapy, tensorflow, huggingface
-            \end{highlights}
-        \end{onecolentry}
-
-        \vspace{0.2cm}
-
-
-
-
-        \begin{twocolentry}
-            {\textit{\href{https://ianzhang42.github.io/}{link}}}
-            \textbf{Personal Website}
-        \end{twocolentry}
-        \begin{onecolentry}
-            \begin{highlights}
-                \item Created a personal portfolio website to showcase my projects and academic work
-                \item Website highlights my web development skills, Git version control, and responsive design practices
-                \item Tools used: HTML, CSS, GitHub Pages
-            \end{highlights}
-        \end{onecolentry}
-
-
-
-
-     \vspace{0.2 cm}
-
-    \section{Honours and Awards}
-
-
-
-
-
-    \begin{twocolentry}{   
-            
-        \textit{2023, 2024}}
-            \textbf{NSERC Undergraduate Student Research Award}
-        \end{twocolentry}
-
-        \vspace{0.10 cm}
-    \begin{twocolentry}{      NSERC, UofA}
-        Awarded to conduct research during the 2023 and 2024 Spring/Summer terms under the supervision of Professor Mike A. Kouritzin at the University of Alberta
-    \end{twocolentry}
-
-    \vspace{0.2cm}
-
-    \begin{twocolentry}
-       { \textit{2022}}
-        \textbf{Jack Zwaigenbaum Scholarship}
-    \end{twocolentry}
-    \vspace{0.1cm}
-    \begin{twocolentry}
-        {University College, UofT}
-        Awarded for academic excellence in the 2021-2022 school year
-    \end{twocolentry}
-
-    \vspace{0.2cm}
-    \begin{twocolentry}{
-        \textit{2022, 2023, 2024}
-    }
-        \textbf{Dean's List Scholar (x3)}
-    \end{twocolentry}
-    \vspace{0.1cm}
-    \begin{twocolentry}
-        {
-            FAS, UofT
-        }
-        Awarded for maintaining academic excellence throughout my undergrad
-    \end{twocolentry}
-
-    \section{Technical Skills}
-
-
-        \begin{onecolentry}
-            \textbf{Programming Languages:} Python, R, SQL, Java, MATLAB, Julia
-        \end{onecolentry}
-
-        \vspace{0.2 cm}
-
-        \begin{onecolentry}
-            \textbf{Tools and Frameworks:} PyTorch, VS Code, JupyterHub, RStudio, GitHub
-        \end{onecolentry}
-
-        \vspace{0.2cm}
-        \begin{onecolentry}
-            \textbf{Languages Spoken:} English (native), Mandarin (native), Japanese (intermediate)
-        \end{onecolentry}
-
-    
 
 \end{document}
