Updated most webpages; removed about me page and integrated that with the home page, updated CV, course list

--- a/ian_CV.tex
+++ b/ian_CV.tex
@@ -109,17 +109,19 @@ Website: \href{www.ian-zhang.com}{ian-zhang.com}
 \section*{Education}
 \textbf{MSc in Statistics}, University of Toronto \hfill \textit{2026}\\
 \textbf{Honours BSc in Statistics/Mathematics}, University of Toronto \hfill \textit{2025}\\
-\underline{Advisor:} \href{https://junjypark.github.io/}{Jun Young Park}
+\indent\hspace{0.2cm} \underline{Advisor:} \href{https://junjypark.github.io/}{Jun Young Park}
 
 \section*{Experience}
 \textbf{Summer Research Trainee}, McGill University \hfill \textit{2025}\\
-\textbf{Research Assistant}, University of Alberta \hfill \textit{2023-2024}
+\indent\hspace{0.2cm} Supervisor: \href{https://www.xialab.ca/}{Jianguo (Jeff) Xia}\\
+\textbf{Research Assistant}, University of Alberta \hfill \textit{2023-2024}\\
+\indent\hspace{0.2cm} Supervisor: \href{https://www.math.ualberta.ca/~mkouritz/Kouritzin_M.html}{Mike Kouritzin}
 
 \section*{Publications}
 {\small* = Corresponding Author}
 \subsection*{Under Review}
 \begin{enumerate}
-    \item Michael A. Kouritzin, \textbf{Ian Zhang}*, Jyoti Bhadana, Seoyeon Park \hfill \textit{2024}\\
+    \item Mike A. Kouritzin, \textbf{Ian Zhang}*, Jyoti Bhadana, Seoyeon Park \hfill \textit{2024}\\
     Markov Processes for Enhanced Deepfake Generation and Detection \\
     \url{https://arxiv.org/abs/2411.07993}
 \end{enumerate}
