--- a/ian_CV.tex
+++ b/ian_CV.tex
@@ -117,7 +117,7 @@ Website: \href{www.ian-zhang.com}{ian-zhang.com}
 \textbf{Research Assistant}, University of Alberta \hfill \textit{2023-2024}\\
 \indent\hspace{0.2cm} Supervisor: \href{https://www.math.ualberta.ca/~mkouritz/Kouritzin_M.html}{Mike Kouritzin}
 
-\section*{Publications}
+\section*{Publications and Preprints}
 {\small* = Corresponding Author}
 \subsection*{Under Review}
 \begin{enumerate}
@@ -139,6 +139,10 @@ Anna \& Alex Beverly Memorial Fellowship \hfill \textit{2025}\\
 NSERC Undergraduate Student Research Award (x2) \hfill \textit{2023, 2024}\\
 Jack Zwaigenbaum Scholarship \hfill \textit{2022}\\
 Dean's List Scholar (x4) \hfill \textit{2022, 2023, 2024, 2025}
+
+\section*{Grants}
+CSSC Travel Grant \hfill \textit{2025}
+\indent \hspace*{0.2cm} 
 
 \section*{Services}
 \subsection*{Conferences}
