--- a/ian_CV.tex
+++ b/ian_CV.tex
@@ -16,7 +16,7 @@
     colorlinks = false,
     citecolor = blue
 }
-\usepackage{amsmath, amssymb, amsthm, lastpage, upgreek, fancyhdr, seqsplit, bm, mathrsfs, accents, transparent, dsfont, float, esint, tikz, lipsum, lmodern, hyperref, cleveref, bigints, tikz-among-us, graphicx, xcolor, listings, breqn, cancel}
+\usepackage{amsmath, amssymb, amsthm, lastpage, upgreek, fancyhdr, seqsplit, bm, mathrsfs, accents, transparent, dsfont, float, esint, tikz, lipsum, lmodern, hyperref, cleveref, bigints, tikz-among-us, graphicx, xcolor, listings, breqn, cancel, enumitem}
 \usepackage{minted}
 \usepackage[most]{tcolorbox}
 \usepackage[framemethod=TikZ]{mdframed}
@@ -96,6 +96,7 @@ frametitleaboveskip=\dimexpr-\ht\strutbox\relax
 
 
 \begin{document}
+\sloppy
 \hfill {\scriptsize\textit{\textcolor{gray}{Last updated: June 2025}}}
 \begin{center}
     {\huge \textbf{Ian Zhang}}\\
@@ -108,8 +109,13 @@ Website: \href{www.ian-zhang.com}{ian-zhang.com}
 
 \section*{Education}
 \textbf{MSc in Statistics}, University of Toronto \hfill \textit{2026}\\
-\textbf{Honours BSc in Statistics/Mathematics}, University of Toronto \hfill \textit{2025}\\
-\indent\hspace{0.2cm} \underline{Advisor:} \href{https://junjypark.github.io/}{Jun Young Park}
+\textbf{Honours BSc in Statistics/Mathematics}, University of Toronto \hfill \textit{2025}
+\begin{itemize}[itemsep=2pt, parsep=0pt, topsep=0pt]
+    \item \underline{Advisor:} Jun Young Park
+    \item Graduated with high distinction
+    \item \underline{Relevant coursework:} Machine learning, stochastic processes, statistical inference, methods of multivariate data, real analysis, linear algebra, ordinary and partial differential equations, introduction to computer science and programming
+  \end{itemize}
+  
 
 \section*{Experience}
 \textbf{Summer Research Trainee}, McGill University \hfill \textit{2025}\\
@@ -118,10 +124,10 @@ Website: \href{www.ian-zhang.com}{ian-zhang.com}
 \indent\hspace{0.2cm} Supervisor: \href{https://www.math.ualberta.ca/~mkouritz/Kouritzin_M.html}{Mike Kouritzin}
 
 \section*{Publications and Preprints}
-{\small* = Corresponding Author}
-\subsection*{Under Review}
+{\small $^\dag$: Corresponding Author; \hspace{1cm} *: Equal contribution}
+\subsection*{Preprints}
 \begin{enumerate}
-    \item Mike A. Kouritzin, \textbf{Ian Zhang}*, Jyoti Bhadana, Seoyeon Park \hfill \textit{2024}\\
+    \item Mike A. Kouritzin, \textbf{Ian Zhang}$^\dag$, Jyoti Bhadana, Seoyeon Park \hfill \textit{2024}\\
     Markov Processes for Enhanced Deepfake Generation and Detection \\
     \url{https://arxiv.org/abs/2411.07993}
 \end{enumerate}
@@ -135,18 +141,26 @@ Third Joint SIAM/CAIMS Annual Meetings (scheduled) \hfill \textit{2025}
 The Thirteenth Annual Canadian Statistics Student Conference \hfill \textit{2025}
 
 \section*{Honours and Awards}
-Anna \& Alex Beverly Memorial Fellowship \hfill \textit{2025}\\
-NSERC Undergraduate Student Research Award (x2) \hfill \textit{2023, 2024}\\
-Jack Zwaigenbaum Scholarship \hfill \textit{2022}\\
-Dean's List Scholar (x4) \hfill \textit{2022, 2023, 2024, 2025}
+\textbf{Anna \& Alex Beverly Memorial Fellowship} \hfill \textit{2025}\\
+Awarded by University College (University of Toronto) for general proficiency during my undergraduate degree.
+
+\textbf{NSERC Undergraduate Student Research Award (x2)} \hfill \textit{2023, 2024}\\
+Awarded by the University of Alberta to research Markov process methods for deepfake generation and detection. 
+
+\textbf{Jack Zwaigenbaum Scholarship }\hfill \textit{2022}\\
+Awarded by University College (University of Toronto) for academic excellence in my first year of undergraduate studies.
+
+\textbf{Dean's List Scholar (x4)} \hfill \textit{2022, 2023, 2024, 2025}\\
+Awarded by the Faculty of Arts and Science (University of Toronto) for maintaining academic excellence every year of my undergraduate degree. 
 
 \section*{Grants}
-CSSC Travel Grant \hfill \textit{2025}
-\indent \hspace*{0.2cm} 
+\textbf{CSSC Travel Grant} \hfill \textit{2025}\\
+Awarded to full-time Canadian students presenting a poster or giving a talk at the Canadian Statistics Student Conference
 
 \section*{Services}
 \subsection*{Conferences}
-Session co-chair, 2025 Third Joint SIAM/CAIMS Annual Meetings (scheduled) 
+\textbf{Session co-chair, 2025 Third Joint SIAM/CAIMS Annual Meetings} (scheduled) \\
+Invited to co-chair the ``Machine Learning and Stochastic Processes'' session 
 
 
 \section*{Other}
