--- a/ian_CV.tex
+++ b/ian_CV.tex
@@ -1,15 +1,7 @@
 %====== BASIC PREAMBLE STUFF =======
 \documentclass[11pt]{article}
 \usepackage[nottoc,numbib]{tocbibind}
-\usepackage{geometry} 
-\geometry{
-    a4paper,
-    total={170mm,257mm},
-    left=1in,
-    top=1in,
-    bottom = 1in,
-    right = 1in
-}
+\usepackage[a4paper, margin=1in]{geometry} 
 \usepackage[hyphens, spaces, obeyspaces]{url}
 \usepackage{hyperref}
 \hypersetup{
@@ -134,11 +126,15 @@ Website: \href{www.ian-zhang.com}{ian-zhang.com}
 
 \section*{Presentations}
 \subsection*{Talks}
-2025 SSC Annual Meeting in Saskatoonn \hfill \textit{2025}\\
-Third Joint SIAM/CAIMS Annual Meetings (scheduled) \hfill \textit{2025}
+\textbf{2025 SSC Annual Meeting in Saskatoon} \hfill \textit{2025}\\
+Presented \textit{Markov Processes for Enhanced Deepfake Generation and Detection} in the Probability session. 
+
+\textbf{Third Joint SIAM/CAIMS Annual Meetings (scheduled)} \hfill \textit{2025}\\
+Will be presenting \textit{Markov Processes for Enhanced Deepfake Generation and Detection} in the Machine Learning and Stochastic Processes session.
 
 \subsection*{Posters}
-The Thirteenth Annual Canadian Statistics Student Conference \hfill \textit{2025}
+\textbf{The Thirteenth Annual Canadian Statistics Student Conference} \hfill \textit{2025}\\
+Presented \textit{Comparing Exact and Approximate Inference for Spatial Autocorrelation Tests: A Power Analysis}.
 
 \section*{Honours and Awards}
 \textbf{Anna \& Alex Beverly Memorial Fellowship} \hfill \textit{2025}\\
@@ -155,12 +151,12 @@ Awarded by the Faculty of Arts and Science (University of Toronto) for maintaini
 
 \section*{Grants}
 \textbf{CSSC Travel Grant} \hfill \textit{2025}\\
-Awarded to full-time Canadian students presenting a poster or giving a talk at the Canadian Statistics Student Conference
+Awarded to full-time Canadian students presenting a poster or giving a talk at the Canadian Statistics Student Conference.
 
 \section*{Services}
 \subsection*{Conferences}
 \textbf{Session co-chair, 2025 Third Joint SIAM/CAIMS Annual Meetings} (scheduled) \\
-Invited to co-chair the ``Machine Learning and Stochastic Processes'' session 
+Invited to co-chair the ``Machine Learning and Stochastic Processes'' session.
 
 
 \section*{Other}
