updated CV to say session chair, not co-chair

--- a/ian_CV.tex
+++ b/ian_CV.tex
@@ -119,7 +119,7 @@ Website: \href{www.ian-zhang.com}{ian-zhang.com}
 {\small $^\dag$: Corresponding Author; \hspace{1cm} *: Equal contribution}
 \subsection*{Preprints}
 \begin{enumerate}
-    \item Mike A. Kouritzin, \textbf{Ian Zhang}$^\dag$, Jyoti Bhadana, Seoyeon Park \hfill \textit{2024}\\
+    \item Michael A. Kouritzin, \textbf{Ian Zhang}$^\dag$, Jyoti Bhadana, Seoyeon Park \hfill \textit{2024}\\
     Markov Processes for Enhanced Deepfake Generation and Detection \\
     \url{https://arxiv.org/abs/2411.07993}
 \end{enumerate}
@@ -155,8 +155,8 @@ Awarded to full-time Canadian students presenting a poster or giving a talk at t
 
 \section*{Services}
 \subsection*{Conferences}
-\textbf{Session co-chair, 2025 Third Joint SIAM/CAIMS Annual Meetings} (scheduled) \\
-Invited to co-chair the ``Machine Learning and Stochastic Processes'' session.
+\textbf{Sessionchair, 2025 Third Joint SIAM/CAIMS Annual Meetings} (scheduled) \\
+Invited to chair the ``Machine Learning and Stochastic Processes'' session.
 
 
 \section*{Other}
