--- a/ian_CV.tex
+++ b/ian_CV.tex
@@ -89,7 +89,7 @@ frametitleaboveskip=\dimexpr-\ht\strutbox\relax
 
 \begin{document}
 \sloppy
-\hfill {\scriptsize\textit{\textcolor{gray}{Last updated: June 2025}}}
+\hfill {\scriptsize\textit{\textcolor{gray}{Last updated: September 2025}}}
 \begin{center}
     {\huge \textbf{Ian Zhang}}\\
     \textit{Curriculum Vitae}
@@ -109,12 +109,6 @@ Website: \href{www.ian-zhang.com}{ian-zhang.com}
   \end{itemize}
   
 
-\section*{Experience}
-\textbf{Summer Research Trainee}, McGill University \hfill \textit{2025}\\
-\indent\hspace{0.2cm} Supervisor: \href{https://www.xialab.ca/}{Jianguo (Jeff) Xia}\\
-\textbf{Research Assistant}, University of Alberta \hfill \textit{2023-2024}\\
-\indent\hspace{0.2cm} Supervisor: \href{https://www.math.ualberta.ca/~mkouritz/Kouritzin_M.html}{Mike Kouritzin}
-
 \section*{Publications and Preprints}
 {\small $^\dag$: Corresponding Author; \hspace{1cm} *: Equal contribution}
 \subsection*{Preprints}
@@ -124,13 +118,25 @@ Website: \href{www.ian-zhang.com}{ian-zhang.com}
     \url{https://arxiv.org/abs/2411.07993}
 \end{enumerate}
 
+\section*{Experience}
+\textbf{Summer Research Trainee}, McGill University \hfill \textit{2025}\\
+\indent\hspace{0.2cm} Supervisor: \href{https://www.xialab.ca/}{Jianguo (Jeff) Xia}\\
+\textbf{Research Assistant}, University of Alberta \hfill \textit{2023-2024}\\
+\indent\hspace{0.2cm} Supervisor: \href{https://www.math.ualberta.ca/~mkouritz/Kouritzin_M.html}{Mike Kouritzin}
+
+\section*{Teaching}
+\subsection*{Teaching Assistant}
+\textbf{MAT137: Calculus with Proofs} \hfill \textit{Fall 2025 \& Winter 2026}\\
+\textbf{STA302: Methods of Data Analysis I} \hfill \textit{Fall 2025}\\
+\textbf{STA437: Methods of Multivariate Data} \hfill \textit{Winter 2026}   
+
 \section*{Presentations}
 \subsection*{Talks}
 \textbf{2025 SSC Annual Meeting in Saskatoon} \hfill \textit{2025}\\
 Presented \textit{Markov Processes for Enhanced Deepfake Generation and Detection} in the Probability session. 
 
 \textbf{Third Joint SIAM/CAIMS Annual Meetings (scheduled)} \hfill \textit{2025}\\
-Will be presenting \textit{Markov Processes for Enhanced Deepfake Generation and Detection} in the Machine Learning and Stochastic Processes session.
+Presented \textit{Markov Processes for Enhanced Deepfake Generation and Detection} in the Machine Learning and Stochastic Processes session.
 
 \subsection*{Posters}
 \textbf{The Thirteenth Annual Canadian Statistics Student Conference} \hfill \textit{2025}\\
@@ -153,15 +159,21 @@ Awarded by the Faculty of Arts and Science (University of Toronto) for maintaini
 \textbf{CSSC Travel Grant} \hfill \textit{2025}\\
 Awarded to full-time Canadian students presenting a poster or giving a talk at the Canadian Statistics Student Conference.
 
+
+
+
 \section*{Services}
 \subsection*{Conferences}
-\textbf{Sessionchair, 2025 Third Joint SIAM/CAIMS Annual Meetings} (scheduled) \\
-Invited to chair the ``Machine Learning and Stochastic Processes'' session.
+\textbf{Session chair, 2025 Third Joint SIAM/CAIMS Annual Meetings} (scheduled) \\
+Chaired the ``Machine Learning and Stochastic Processes'' session.
 
 
 \section*{Other}
 \underline{Languages Spoken:} English (native), Mandarin (native), Japanese (intermediate)\\
 \underline{Memberships:} Statistical Society of Canada
+
+
+
 
 
 
