--- a/ian_CV.tex
+++ b/ian_CV.tex
@@ -135,7 +135,7 @@ Website: \href{www.ian-zhang.com}{ian-zhang.com}
 \textbf{2025 SSC Annual Meeting in Saskatoon} \hfill \textit{2025}\\
 Presented \textit{Markov Processes for Enhanced Deepfake Generation and Detection} in the Probability session. 
 
-\textbf{Third Joint SIAM/CAIMS Annual Meetings (scheduled)} \hfill \textit{2025}\\
+\textbf{Third Joint SIAM/CAIMS Annual Meetings} \hfill \textit{2025}\\
 Presented \textit{Markov Processes for Enhanced Deepfake Generation and Detection} in the Machine Learning and Stochastic Processes session.
 
 \subsection*{Posters}
@@ -164,7 +164,7 @@ Awarded to full-time Canadian students presenting a poster or giving a talk at t
 
 \section*{Services}
 \subsection*{Conferences}
-\textbf{Session chair, 2025 Third Joint SIAM/CAIMS Annual Meetings} (scheduled) \\
+\textbf{Session chair, 2025 Third Joint SIAM/CAIMS Annual Meetings}\\
 Chaired the ``Machine Learning and Stochastic Processes'' session.
 
 
